--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.10.3",
     "flowbite": "^1.6.4",
     "framer-motion": "^10.2.2",
+    "pdfjs-dist": "^3.8.162",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
