--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.13.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.4",
     "bootstrap-icons": "^1.10.3",
     "flowbite": "^1.6.4",
     "framer-motion": "^10.2.2",
-    "pdfjs-dist": "^3.8.162",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
