--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Editar archivo .env
         run: |
-          sed -i 's~VITE_URL_APP=""~VITE_URL_APP="https://tp.syssoftintegra.com/servicios/pj"~' .env
+          sed -i 's/VITE_URL_APP = ""/VITE_URL_APP = "https:\/\/tp.syssoftintegra.com\/servicios\/pj"/' .env
           
       - name: Mostrar contenido del archivo .env
         run: cat .env
