Nuevos cambios en el workflows v9

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,17 +20,21 @@ jobs:
       - name: Checkout código
         uses: actions/checkout@v3
 
-      # - name: Crear archivo .env
-      #   run: cp .env.example .env
-      
-        # - name: Editar archivo .env
-        # run: |
-          # sed -i 's/VITE_URL_APP = ""/VITE_URL_APP = "${VITE_URL_APP}"/' .env
-        # env:
-          # VITE_APP_URL: ${{ secrets.VITE_URL_APP }}
+      - name: Mostrar env
+        run: echo $VITE_URL_APP
 
-      # - name: Mostrar contenido del archivo .env
-      #   run: cat .env
+      - name: Mostrar env1
+        run: echo VITE_URL_APP
+
+      - name: Crear archivo .env
+        run: cp .env.example .env
+      
+      - name: Editar archivo .env
+        run: |
+          sed -i 's/VITE_URL_APP = ""/VITE_URL_APP = "${VITE_URL_APP}"/' .env
+
+      - name: Mostrar contenido del archivo .env
+        run: cat .env
 
       - name: Create container
         run: docker-compose up --build -d
