--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,9 +12,8 @@ jobs:
 
     runs-on: self-hosted
 
-    # env:
-    #   VITE_URL_APP: ${{ secrets.VITE_URL_APP }}
-    #   VITE_URL_SERVER_SEND_EVENT: ${{ secrets.VITE_URL_SERVER_SEND_EVENT }}
+    env:  
+      VITE_URL_APP: ${{ secrets.VITE_URL_APP }}
 
     steps:
       - name: Checkout código
@@ -27,15 +26,13 @@ jobs:
           else
             echo "La variable de entorno VITE_URL_APP contiene datos: $VITE_URL_APP"
           fi
-        env:
-          VITE_URL_APP: ${{ secrets.VITE_URL_APP }}
 
       - name: Crear archivo .env
         run: cp .env.example .env
       
       - name: Editar archivo .env
         run: |
-          sed -i 's/VITE_URL_APP = ""/VITE_URL_APP = "$VITE_URL_APP"/' .env
+          sed -i "s/VITE_URL_APP = \"\"/VITE_URL_APP = \"$VITE_URL_APP\"/" .env
 
       - name: Mostrar contenido del archivo .env
         run: cat .env
