--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: self-hosted
 
     env:  
-      VITE_URL_APP: ${{ secrets.VITE_URL_APP }}
+      VITE_URL_APP: hola
 
     steps:
       - name: Checkout código
