--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Mostrar contenido del archivo .env
         run: cat .env
 
-      # - name: Create container
-      #   run: docker-compose up --build -d
+      - name: Create container
+        run: docker-compose up --build -d
       # - name: Build the Docker image
         # run: sudo docker stop next-app && sudo docker rm next-app
       # - name: Remove existing image
